--- a/help.me/app/src/main/res/layout/activity_contacts.xml
+++ b/help.me/app/src/main/res/layout/activity_contacts.xml
@@ -1,110 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             xmlns:tools="http://schemas.android.com/tools"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="match_parent"
-                                             android:background="#000000"
-                                             tools:context="com.firstapp.helpme.SettingsActivity">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#000000"
+    tools:context="com.firstapp.helpme.SettingsActivity">
 
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="match_parent"
         android:layout_height="39dp"
+        android:layout_below="@+id/textView10"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="12dp"
         android:text="FAMILY"
         android:textAlignment="center"
         android:textColor="#ffffff"
         android:textSize="30dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView13"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"/>
+        tools:layout_editor_absoluteY="49dp"/>
 
     <ImageView
         android:id="@+id/imageView12"
         android:layout_width="42dp"
         android:layout_height="33dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.956"
-        app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/add"
+        tools:layout_editor_absoluteX="353dp"
         tools:layout_editor_absoluteY="257dp"/>
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="36dp"
         android:layout_height="33dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView8"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.957"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/add"/>
+        android:layout_alignBottom="@+id/textView9"
+        android:layout_toStartOf="@+id/textView12"
+        app:srcCompat="@drawable/add"
+        tools:layout_editor_absoluteX="359dp"
+        tools:layout_editor_absoluteY="16dp"/>
 
     <TextView
         android:id="@+id/textView9"
         android:layout_width="407dp"
         android:layout_height="42dp"
+        android:layout_above="@+id/imageView2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="40dp"
         android:text="FRIENDS"
         android:textAlignment="center"
         android:textColor="#ffffff"
         android:textSize="30dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView12"/>
+        tools:layout_editor_absoluteX="2dp"
+        tools:layout_editor_absoluteY="295dp"/>
 
     <ImageView
         android:id="@+id/imageView13"
         android:layout_width="89dp"
-        android:layout_height="98dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView10"
-        app:layout_constraintEnd_toStartOf="@+id/imageView14"
-        app:layout_constraintHorizontal_bias="0.666"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8"
-        app:srcCompat="@drawable/mom"/>
+        android:layout_height="102dp"
+        android:layout_alignBottom="@+id/imageView14"
+        android:layout_marginStart="8dp"
+        android:layout_toEndOf="@+id/imageView12"
+        app:srcCompat="@drawable/mom"
+        tools:layout_editor_absoluteX="36dp"
+        tools:layout_editor_absoluteY="96dp"/>
 
     <ImageView
         android:id="@+id/imageView14"
         android:layout_width="89dp"
         android:layout_height="98dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView11"
-        app:layout_constraintEnd_toStartOf="@+id/imageView17"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/imageView13"
-        app:layout_constraintTop_toBottomOf="@+id/textView8"
-        app:srcCompat="@drawable/dad"/>
+        android:layout_below="@+id/textView8"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="18dp"
+        app:srcCompat="@drawable/dad"
+        tools:layout_editor_absoluteX="161dp"
+        tools:layout_editor_absoluteY="98dp"/>
 
     <ImageView
         android:id="@+id/imageView17"
         android:layout_width="89dp"
         android:layout_height="98dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView12"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/imageView14"
-        app:layout_constraintTop_toBottomOf="@+id/textView8"
-        app:srcCompat="@drawable/sister"/>
-
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="102dp"
-        android:layout_height="51dp"
-        android:text="Mom\nStatus: okay"
-        android:textAlignment="center"
-        android:textColor="#fff"
-        tools:layout_editor_absoluteX="35dp"
-        tools:layout_editor_absoluteY="206dp"/>
+        android:layout_alignEnd="@+id/textView7"
+        android:layout_alignTop="@+id/imageView14"
+        android:layout_marginEnd="9dp"
+        app:srcCompat="@drawable/sister"
+        tools:layout_editor_absoluteX="286dp"
+        tools:layout_editor_absoluteY="98dp"/>
 
     <TextView
         android:id="@+id/textView11"
         android:layout_width="102dp"
         android:layout_height="51dp"
+        android:layout_alignBaseline="@+id/textView12"
+        android:layout_alignBottom="@+id/textView12"
+        android:layout_alignStart="@+id/imageView14"
         android:text="Dad\nStatus: Unknown "
         android:textAlignment="center"
         android:textColor="#fff"
@@ -117,6 +106,9 @@
         android:id="@+id/textView12"
         android:layout_width="102dp"
         android:layout_height="51dp"
+        android:layout_below="@+id/imageView13"
+        android:layout_marginTop="24dp"
+        android:layout_toEndOf="@+id/imageView12"
         android:text="Mom\nStatus: okay"
         android:textAlignment="center"
         android:textColor="#fff"
@@ -127,17 +119,21 @@
         android:id="@+id/imageView2"
         android:layout_width="89dp"
         android:layout_height="98dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView6"
-        app:layout_constraintEnd_toStartOf="@+id/imageView3"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9"
-        app:srcCompat="@drawable/barack"/>
+        android:layout_above="@+id/textView6"
+        android:layout_alignEnd="@+id/textView6"
+        android:layout_marginBottom="14dp"
+        app:srcCompat="@drawable/barack"
+        tools:layout_editor_absoluteX="78dp"
+        tools:layout_editor_absoluteY="342dp"/>
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="88dp"
         android:layout_height="43dp"
+        android:layout_alignBaseline="@+id/textView7"
+        android:layout_alignBottom="@+id/textView7"
+        android:layout_marginEnd="8dp"
+        android:layout_toStartOf="@+id/imageView14"
         android:text="Barack\nStatus: Okay"
         android:textAlignment="center"
         android:textColor="#fff"
@@ -148,25 +144,37 @@
         android:id="@+id/imageView3"
         android:layout_width="89dp"
         android:layout_height="98dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView7"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView9"
-        app:layout_constraintVertical_bias="0.454"
-        app:srcCompat="@drawable/savior"/>
+        android:layout_alignTop="@+id/imageView2"
+        android:layout_toEndOf="@+id/imageView14"
+        app:srcCompat="@drawable/savior"
+        tools:layout_editor_absoluteX="245dp"
+        tools:layout_editor_absoluteY="342dp"/>
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="117dp"
         android:layout_height="43dp"
+        android:layout_alignEnd="@+id/textView9"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="66dp"
+        android:layout_marginEnd="48dp"
         android:text="Donald\nStatus: Fantastic"
         android:textAlignment="center"
         android:textColor="#fff"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/textView6"
+        tools:layout_editor_absoluteX="230dp"
         tools:layout_editor_absoluteY="446dp"/>
 
+    <TextView
+        android:id="@+id/textView13"
+        android:layout_width="117dp"
+        android:layout_height="43dp"
+        android:layout_alignBottom="@+id/textView11"
+        android:layout_alignEnd="@+id/textView7"
+        android:layout_alignTop="@+id/textView11"
+        android:layout_toEndOf="@+id/imageView14"
+        android:textColor="#ffffff"
+        android:textAlignment="center"
+        android:text="Sister\nStatus: Okay"/>
 
-</android.support.constraint.ConstraintLayout>
+
+</RelativeLayout>
