--- a/help.me/app/src/main/res/layout/activity_main.xml
+++ b/help.me/app/src/main/res/layout/activity_main.xml
@@ -81,6 +81,7 @@
 
     <ImageView
         android:id="@+id/groups"
+        android:onClick="contanctClicked"
         android:layout_width="64dp"
         android:layout_height="67dp"
         app:layout_constraintBottom_toBottomOf="parent"
